--- a/index.html
+++ b/index.html
@@ -69,13 +69,18 @@
         <div class="container-about-row">
           <div class="col-md-4">
             <div class="features-box">
-              <img class="about-image" src="img/about.png">
-              <p class="about-text-2" style="text-align: right; padding-right:30px;">Нашата болница е посветена на предоставянето на качествена медицинска помощ на нашите пациенти.  Използваме най-новите технологии и методи за лечение, за да осигурим оптимално здравеопазване. 
-                Нашите медицински специалисти са обучени да се грижат за различни медицински случаи и да предоставят персонализирано лечение, което да отговаря на нуждите на всеки един от нашите пациенти. </p>
-              <div style="overflow:hidden;">
-              <div class="col-md-4">
-              <p class="about-text-1" style="text-align: right; font-size:23px; padding-right:30px">Нашата болница е посветена на предоставянето на качествена медицинска помощ на нашите пациенти.  Използваме най-новите технологии и методи за лечение, за да осигурим оптимално здравеопазване. 
-               Нашите медицински специалисти са обучени да се грижат за различни медицински случаи и да предоставят персонализирано лечение, което да отговаря на нуждите на всеки един от нашите пациенти. </p>
+              <img class="about-image" src="img/about.png"> 
+              <p class="about-text-2" style="text-align: right; padding-right:30px;"> Ние сме екипът, който стои зад този иновативен проект.
+
+              Нашата мисия е да предоставим на пациентите лесен и удобен начин за достъп до медицински услуги и информация. С нашата електронна болница, пациентите могат да получат консултация и лечение онлайн, да следят своето здравно състояние и да получават лабораторни резултати, без да трябва да напускат удобството на своя дом.
+            
+              Ние вярваме, че електронната болница е бъдещето на медицината. С помощта на технологиите можем да променим начина, по който хората получават медицинска помощ и да ги направим по-свободни и независими. Нашата цел е да направим здравната грижа по-достъпна и удобна за всички.
+              Нашите медицински специалисти са висококвалифицирани и опитни професионалисти, които са готови да отговорят на всякакви здравни въпроси и да помогнат на пациентите да се чувстват по-добре. <br> Ние сме посветени на това да осигурим най-доброто лечение и грижа за нашите пациенти.</p>
+                  </div>
+                  <p class="about-text-3" style="font-weight: bold; font-size: 30px; text-align: center;">
+                    Благодарим Ви, че избрахте електронната болница. <br> Ще се радваме да Ви помогнем да подобрите здравето си и да получите необходимата медицинска помощ.
+                    </p>
+                </div>                          
             </div>
           </div>
         </div>
@@ -104,9 +109,9 @@
         <img src="img/images/doctor3.jpg" alt="rgeorgiev" style="width:100%;">
         <div class="container">
           <center>
-          <h2 style="font-size: 22px;">д-р Радослав Георгиев</h2>
-          <p class="title">Специалист по детски болести</p>
-          <p class="email" style="margin-top:-10px;">rgeorgiev@ehospital.bg</p> 
+          <h2 style="font-size: 22px;">д-р Добрин Игнатов</h2>
+          <p class="title">Специалист по вътрешни болести</p>
+          <p class="email" style="margin-top:-10px;">dobrin_ignatov@ehospital.bg</p> 
           </center>
         </div>
       </div>
@@ -118,7 +123,7 @@
         <div class="container">
           <center>
             <h2 style="font-size: 22px;"> д-р Веселин Младенов </h2>
-            <p class="title">Хематолог</p>
+            <p class="title">Специалист по детски болести</p>
             <p class="email" style="margin-top:-10px;"> veselin_mladenov@ehospital.bg</p> 
           </center>
         </div>
@@ -131,7 +136,7 @@
         <div class="container">
           <center>
             <h2 style="font-size: 22px;"> д-р Антоанета Христова </h2>
-            <p class="title"> Гастроентеролог </p>
+            <p class="title"> Акушерство и гинекология </p>
             <p class="email" style="margin-top:-10px;"> toni_hristova@ehospital.bg</p> 
           </center>
         </div>
