--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <img src="img/images/doctor1.jpg" alt="velislav_stoyanov" style="width:100%">
             <div class="container">
               <center>
-                <h2 style="font-size: 22px;"> д-р Велислав Стоянов</h2>
+                <h2 style="font-size: 22px;"> д-р Velislav Стоянов</h2>
                 <p class="title">Кардиолог</p>
                 <p class="email" style="margin-top:-10px;"> velislav_stoyanov@ehospital.bg</p> 
               </center>
@@ -133,7 +133,7 @@
         <img src="img/images/doctor2.jpg" alt="toni_hristova" style="width:100%">
         <div class="container">
           <center>
-            <h2 style="font-size: 22px;"> д-р Антоанета Христова </h2>
+            <h2 style="font-size: 22px;"> д-р Тони Христова </h2>
             <p class="title"> Акушерство и гинекология </p>
             <p class="email" style="margin-top:-10px;"> toni_hristova@ehospital.bg</p> 
           </center>
