--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <img src="img/images/doctor1.jpg" alt="velislav_stoyanov" style="width:100%">
             <div class="container">
               <center>
-                <h2 style="font-size: 22px;"> д-р Велислав Стоянов</h2>
+                <h2 style="font-size: 22px;"> проф. д-р Велислав Стоянов</h2>
                 <p class="title">Кардиолог</p>
                 <p class="email" style="margin-top:-10px;"> velislav_stoyanov@ehospital.bg</p> 
               </center>
@@ -120,7 +120,7 @@
         <img src="img/images/doctor4.jpg" alt="veselin_mladenov" style="width:100%">
         <div class="container">
           <center>
-            <h2 style="font-size: 22px;"> д-р Веселин Младеновв </h2>
+            <h2 style="font-size: 22px;"> д-р Веселин Младенов </h2>
             <p class="title">Специалист по детски болести</p>
             <p class="email" style="margin-top:-10px;"> veselin_mladenov@ehospital.bg</p> 
           </center>
