--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <img src="img/images/doctor1.jpg" alt="velislav_stoyanov" style="width:100%">
             <div class="container">
               <center>
-                <h2 style="font-size: 22px;"> проф. д-р Велислав Стоянов</h2>
+                <h2 style="font-size: 22px;"> доц. д-р Велислав Стоянов</h2>
                 <p class="title">Кардиолог</p>
                 <p class="email" style="margin-top:-10px;"> velislav_stoyanov@ehospital.bg</p> 
               </center>
@@ -107,7 +107,7 @@
         <img src="img/images/doctor3.jpg" alt="rgeorgiev" style="width:100%;">
         <div class="container">
           <center>
-          <h2 style="font-size: 22px;">д-р Добрин Игнатов</h2>
+          <h2 style="font-size: 22px;"> проф. д-р Добрин Игнатов</h2>
           <p class="title">Специалист по вътрешни болести</p>
           <p class="email" style="margin-top:-10px;">dobrin_ignatov@ehospital.bg</p> 
           </center>
