--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <img src="img/images/doctor3.jpg" alt="rgeorgiev" style="width:100%;">
         <div class="container">
           <center>
-          <h2 style="font-size: 22px;"> доц. д-р Добрин Игнатов</h2>
+          <h2 style="font-size: 22px;"> проф. д-р Добрин Игнатов</h2>
           <p class="title">Специалист по вътрешни болести</p>
           <p class="email" style="margin-top:-10px;">dobrin_ignatov@ehospital.bg</p> 
           </center>
@@ -120,7 +120,7 @@
         <img src="img/images/doctor4.jpg" alt="veselin_mladenov" style="width:100%">
         <div class="container">
           <center>
-            <h2 style="font-size: 22px;"> д-р Иван Младенов </h2>
+            <h2 style="font-size: 22px;"> д-р Веселин Младенов </h2>
             <p class="title">Специалист по детски болести</p>
             <p class="email" style="margin-top:-10px;"> veselin_mladenov@ehospital.bg</p> 
           </center>
@@ -133,7 +133,7 @@
         <img src="img/images/doctor2.jpg" alt="toni_hristova" style="width:100%">
         <div class="container">
           <center>
-            <h2 style="font-size: 22px;"> д-р Тони Христова </h2>
+            <h2 style="font-size: 22px;"> д-р Антоанета Христова </h2>
             <p class="title"> Акушерство и гинекология </p>
             <p class="email" style="margin-top:-10px;"> toni_hristova@ehospital.bg</p> 
           </center>
